# ethoscrawl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  MANUAL_GITHUB_PUSH.md  PROJECT_COMPLETION_SUMMARY.md  PROMOTION_STRATEGY.md  QUICK_PUSH.sh  README.md  SETUP_COMPLETE.md  example.py  mkdocs.yml  push_now.sh  push_to_github.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_github.sh  test_core.py  test_installation.py  test_main.py  test_simple.py  verify_repo.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md  installation.md  quickstart.md
examples/: basic_usage.py  full_workflow.py  quick_start.py
promotion/: BLOG_POST_INTRO.md  PRESS_RELEASE.md  SOCIAL_MEDIA_CALENDAR.md
src/ethoscrawl/: __init__.py  cli.py  simple_crawler.py
src/ethoscrawl/core/: __init__.py  adaptive_engine.py  ethical_framework.py  privacy_layer.py
tests/: conftest.py  test_basic.py
